Update the first post

--- a/_posts/2024-10-24-hello.md
+++ b/_posts/2024-10-24-hello.md
@@ -1,15 +1,15 @@
 ---
 layout: post
-title: Hello Post
+title: Hello World!
 date: 2024-10-23 21:54:00 -500
-categories: [java, spring boot]
-tags: [software, backend] # TAG names should always be lowercase
+#categories: [java, spring boot]
+#tags: [software, backend] # TAG names should always be lowercase
 ---
 
 Welcome to my blog! I’ve started this blog as a space to share my experiences, insights, and a few lessons I’ve picked up along the way. It’s also a place where I’ll keep some of my own notes about software, tools, and techniques that I find interesting.
 
 ```javascript
-console.log('hello world!');
+console.log('Hello World!');
 ```
 
 Whether you’re a fellow developer, someone who’s just starting out, or simply curious about backend development, I hope you’ll find something here that resonates with you. I’m excited to begin this journey and look forward to sharing what I learn.
