Update the post

--- a/_posts/2024-10-24-hello.md
+++ b/_posts/2024-10-24-hello.md
@@ -17,6 +17,6 @@ Whether you’re a fellow developer, someone who’s just starting out, or simpl
 ![img-description](https://cdn.pixabay.com/photo/2024/05/15/20/57/developer-8764521_1280.jpg)
 _Photo by [Vilkasss](https://pixabay.com/users/vilkasss-35420724/) on [pixabay](https://pixabay.com/)_
 
-Stay tuned for more posts on Java, backend architecture, algorithms, and the many tools and trends shaping our industry. Let's learn together!
+Stay tuned for more posts!
 
 Thanks for stopping by!
