--- a/_posts/2024-10-24-hello.md
+++ b/_posts/2024-10-24-hello.md
@@ -12,7 +12,7 @@ Welcome to my blog! I’ve started this blog as a space to share my experiences,
 console.log('Hello World!');
 ```
 
-Whether you’re a fellow developer, someone who’s just starting out, or simply curious about backend development, I hope you’ll find something here that resonates with you. I’m excited to begin this journey and look forward to sharing what I learn.
+Whether you’re a fellow developer, someone who’s just starting out, or simply curious about backend development, I hope you’ll find something here that resonates with you. I’m excited to begin this journey and look forward to sharing.
 
 ![img-description](https://cdn.pixabay.com/photo/2024/05/15/20/57/developer-8764521_1280.jpg)
 _Photo by [Vilkasss](https://pixabay.com/users/vilkasss-35420724/) on [pixabay](https://pixabay.com/)_
